<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.splitcells</groupId>
    <artifactId>pom-java-defaults</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <!-- TODO .gitignore of this project is also a template. -->
    <!-- TODO Update to Java 12. -->
    <!-- TODO Use automatic code formatting with own rules. -->
    <!-- TODO https://fedoramagazine.org/jdk-mission-control-is-now-in-fedora-29/ https://stackoverflow.com/questions/25518834/how-to-add-enable-flag-for-flight-recorder-in-maven-project -->
    <!-- TODO Support FindBugs, SpotBugs,Emma, Cobertura und JaCoCo. -->
    <!-- TODO Support coverage test. -->
    <!-- TODO Behavior-Driven Development: consider Acceptance test via user stories: JBehave, Cucumber or JGiven -->
    <properties>
        <encoding.default>UTF-8</encoding.default>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <gwt.version>2.8.2</gwt.version>
        <packaging>jar</packaging>
    </properties>
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/main/java</testSourceDirectory>
        <plugins>
            <plugin>
                <inherited>true</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.3.1</version>
                <executions>
                    <execution>
                        <id>enforce-maven-3</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.5.4</version>
                                </requireMavenVersion>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <!-- Java version older than 9 is used: "Fatal error compiling: invalid flag: -release -> [Help 1]" -->
                    <release>${java.version}</release>
                    <encoding>${encoding.default}</encoding>
                    <showWarnings>true</showWarnings>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <showDeprecation>true</showDeprecation>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <!-- Writing assertions. -->
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.13.2</version>
        </dependency>
        <dependency>
            <!-- Mockito and PowerMock versions need to be aligned: https://github.com/powermock/powermock/wiki/Mockito#supported-versions -->
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.2.4</version>
        </dependency>
        <dependency>
            <!-- Following classes are used: -->
            <!-- org.apache.commons.lang3.tuple.* -->
            <!-- Javadoc: http://commons.apache.org/proper/commons-lang/javadocs/api-3.4/allclasses-noframe.html -->
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.8.1</version>
        </dependency>
        <dependency>
            <!-- Used in order to generate Javadoc based on "http://splitcells.net/sew.xsd". -->
            <!-- Homepage: http://javaparser.org/ -->
            <!-- Javadoc: http://static.javadoc.io/com.github.javaparser/javaparser-core/3.5.17/allclasses-noframe.html -->
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-symbol-solver-core</artifactId>
            <version>3.6.2</version>
        </dependency>
        <dependency>
            <!-- Library for Functional Programming -->
            <!-- http://www.vavr.io/vavr-docs/ -->
            <!-- Javadoc: https://www.javadoc.io/static/io.vavr/vavr/0.10.3/allclasses-noframe.html -->
            <!-- vavr-test is not used, because JUnit 5 also supports property based testing. -->
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>0.10.3</version>
        </dependency>
        <dependency>
            <!-- XSL Processor -->
            <groupId>net.sf.saxon</groupId>
            <artifactId>Saxon-HE</artifactId>
            <version>9.8.0-11</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>test-via-junit</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.22.2</version>
                        <configuration>
                            <argLine>
                                --illegal-access=permit
                            </argLine>
                            <!--trimStackTrace: show full stack trace in console: source: https://stackoverflow.com/questions/2928548/make-mavens-surefire-show-stacktrace-in-console/16941432#16941432-->
                            <trimStackTrace>false</trimStackTrace>
                            <systemPropertyVariables>
                                <!-- TOFIX Does not work. Currently the property is set in TestSuiteI manually. -->
                                <net.splitcells.mode.build>true</net.splitcells.mode.build>
                            </systemPropertyVariables>
                            <parallel>all</parallel>
                            <useUnlimitedThreads>true</useUnlimitedThreads>
                            <!-- TODO Execute tests in parallel. parallel>all</parallel>
                            <useUnlimitedThreads>true</useUnlimitedThreads-->
                            <excludedGroups>testing.functional</excludedGroups>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>org.junit.platform</groupId>
                    <artifactId>junit-platform-launcher</artifactId>
                    <version>1.6.0</version>
                </dependency>
                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-engine</artifactId>
                    <version>5.5.2</version>
                </dependency>
                <dependency>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-api</artifactId>
                    <version>5.5.2</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>develop</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <!-- Enable incremental builds. -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <!-- source: https://stackoverflow.com/questions/8918165/does-maven-support-incremental-builds/41301660#41301660 -->
                            <!-- source: https://issues.apache.org/jira/browse/MCOMPILER-209 -->
                            <useIncrementalCompilation>false</useIncrementalCompilation>
                            <compilerArgs>
                                <arg>-sun.jnu.encoding=UTF-8</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- Use Lombok only for code generation via delombok ("mvn lombok:delombok"). -->
            <!-- Lombok's @Delegate does not seem to work well in Java 11. -->
            <!-- Following features of Lombok would be very helpful, but have severe implementation problems.
             Val is not used, because it causes a big compilation performance regression. Last time it multiplied compilation times by 100.
            @Delegate is not used, because it is experimental and may have complex bugs. -->
            <id>generate-code-with-lombok</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <lombok.version>1.18.10</lombok.version>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok</artifactId>
                    <version>${lombok.version}</version>
                    <scope>provided</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <annotationProcessorPaths>
                                <!--
                                This prevents following warning: Supported source version 'RELEASE_6' from annotation processor 'org.eclipse.sisu.space.SisuIndexAPT6' less than -source '11'
                                -->
                                <path>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                    <version>${lombok.version}</version>
                                </path>
                            </annotationProcessorPaths>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.projectlombok</groupId>
                        <artifactId>lombok-maven-plugin</artifactId>
                        <version>1.18.10.0</version>
                        <configuration>
                            <sourceDirectory>./src</sourceDirectory>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>delombok</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>develop-with-source-code-errors</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <!-- Use Eclipse compiler as this allows to compile a Java project with errors. This can be used to try things out. -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <compilerId>jdt</compilerId>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>org.eclipse.tycho</groupId>
                                <artifactId>tycho-compiler-jdt</artifactId>
                                <version>1.5.1</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <!-- Execute mutation testing via "mvn -P test-via-mutations-via-pitest clean verify".
            The results are located at "target/pit-reports". -->
            <id>test-via-mutations-via-pitest</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <!-- Error: "Minion exited abnormally due to TIMED_OUT"
            Classification: The error is harmless as it is probably cause by the fact, that a mutation caused an endless loop.
            Source: https://github.com/STAMP-project/pitest-descartes/issues/80 -->
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-maven</artifactId>
                        <version>1.5.0</version>
                        <executions>
                            <execution>
                                <phase>test</phase>
                                <goals>
                                    <goal>mutationCoverage</goal>
                                </goals>
                            </execution>
                        </executions>
                        <dependencies>
                            <dependency>
                                <groupId>org.pitest</groupId>
                                <artifactId>pitest-junit5-plugin</artifactId>
                                <version>0.12</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>profile-performance-of-maven</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>io.tesla.profile</groupId>
                    <artifactId>tesla-profiler</artifactId>
                    <version>0.0.3</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>report</id>
            <!-- Generate all reports via "mvn site". -->
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <!-- Prevent ClassNotFoundException inside "org.apache.maven.plugins:maven-site-plugin" during "mvn site". -->
                        <!-- This needs to be placed into each POM inheriting from this POM for "mvn site" to work without getting ClassNotFoundException. -->
                        <!-- See: https://stackoverflow.com/questions/51091539/maven-site-plugins-3-3-java-lang-classnotfoundexception-org-apache-maven-doxia/51108927#51108927 -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-site-plugin</artifactId>
                        <version>3.7.1</version>
                    </plugin>
                </plugins>
            </build>
            <reporting>
                <plugins>
                    <plugin>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs-maven-plugin</artifactId>
                        <version>4.2.0</version>
                    </plugin>
                    <plugin>
                        <!-- Prevent ClassNotFoundException inside "org.apache.maven.plugins:maven-site-plugin" during "mvn site". -->
                        <!-- See: https://stackoverflow.com/questions/51091539/maven-site-plugins-3-3-java-lang-classnotfoundexception-org-apache-maven-doxia/51108927#51108927 -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-project-info-reports-plugin</artifactId>
                        <version>3.0.0</version>
                    </plugin>
                    <!-- javancss-maven-plugin does not work. -->
                    <!-- Note that this is not located in the build element of Maven, as otherwise the source folders are not found: http://maven.apache.org/guides/mini/guide-configuring-plugins.html#Using_the_reporting_Tag_VS_build_Tag -->
                    <plugin>
                        <!-- Create Javadoc. -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.1.0</version>
                        <configuration>
                            <sourcepath>src/main/java</sourcepath>
                        </configuration>
                    </plugin>
                    <plugin>
                        <!-- Create source code metrics. -->
                        <!-- TODO Check license. -->
                        <groupId>net.sf</groupId>
                        <artifactId>stat-scm</artifactId>
                        <version>1.2.0</version>
                        <configuration>
                            <includes>
                                <include>**/*.java</include>
                            </includes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <!-- Create source code metrics. -->
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>jdepend-maven-plugin</artifactId>
                        <version>2.0</version>
                    </plugin>
                    <plugin>
                        <!-- Create a static code analysis. -->
                        <!-- Usage: "mvn pmd:pmd pmd:cpd" -->
                        <!-- Documentation: https://maven.apache.org/plugins/maven-pmd-plugin/usage.html -->
                        <!-- TODO Are all available reports generated? https://maven.apache.org/plugins/maven-pmd-plugin/project-reports.html -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-pmd-plugin</artifactId>
                        <version>3.12.0</version>
                    </plugin>
                </plugins>
            </reporting>
        </profile>
    </profiles>
    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>
</project>
